fix: marquee overflow

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,12 +1,34 @@
 @import 'tailwindcss';
 @plugin 'daisyui';
 
-@keyframes ticker {
-  0% {
-    transform: translate3d(0, 0, 0);
+@layer utilities {
+  .flex-center {
+    @apply flex items-center justify-center;
   }
+}
 
+.marquee {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+.marquee-box {
+  display: flex;
+  align-items: center;
+  width: 200%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  animation: marquee 12s linear infinite;
+}
+.marquee-item {
+  float: left;
+}
+@keyframes marquee {
+  0% {
+    left: 0;
+  }
   100% {
-    transform: translate3d(-100%, 0, 0);
+    left: -100%;
   }
 }
